# friendly-succotash

./: Cargo.toml  README.md  deployment.yml  ingress.yml  service.yml
src/: main.rs
