[package]
name = "friendly-succotash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = {version="0.14.0", features=["v1_23"]}
kube = {version="0.68.0", default-features=false, features=["client", "rustls-tls"]}
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros"] }
